# MCP-Project

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPMENT_ANALYSIS.md  Dockerfile  README.md  check_import.py  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  requirements.txt  run-mcp-docker.sh
docs/: MCP_SETUP.md
docs/rag/: implementation-plan.md  todos.md
migrations/: 001_add_embedding_columns.sql
scripts/: generate_embeddings_batch.py
src/: container.py
src/domain_document/adapter/output/persistence/: entity.py  repository.py
src/domain_document/application/port/input/: document_use_case.py
src/domain_document/application/port/output/: document_repository_port.py
src/domain_document/application/service/: document_service.py
src/domain_document/domain/model/: document.py
src/mcp/: handler.py
src/project_convention/adapter/output/persistence/: entity.py  repository.py
src/project_convention/application/port/input/: convention_use_case.py
src/project_convention/application/service/: convention_service.py
src/project_convention/domain/model/: convention.py
src/semantic_search/adapter/output/embedding/: __init__.py  (+1 more)
src/semantic_search/application/service/: __init__.py  embedding_service.py  semantic_search_service.py
src/semantic_search/domain/model/: __init__.py  search_result.py
src/web/: router.py  ui_router.py
templates/: base.html  convention_detail.html  domain_detail.html  project_detail.html  project_list.html
tests/: conftest.py
tests/unit/application/service/: test_convention_service.py  test_document_service.py
(+3 files in other folders)
